# ara

./: .ansible-lint  .black.toml  .coveragerc  .gitignore  .gitreview  .readthedocs.yaml  .travis.yml  .zuul.yaml  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  README.rst  bindep.txt  galaxy.yml  manage.py  other-requirements.txt  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
.forgejo/playbooks/: create-ci-vm.yml  delete-ci-vm.yml  test-container-images.yml
.forgejo/workflows/: tests.yaml
.github/ISSUE_TEMPLATE/: ---feature-and-enhancement-requests.md  ---issues--bugs-and-problems.md  feature_and_enhancement.md  issues--bugs-and-problems.md  issues_bugs_problems.md
.zuul.d/: base-jobs.yaml  jobs.yaml  nodesets.yaml  project.yaml  role-jobs.yaml  secrets.yaml  zuul.yaml
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
api/tests/: factories.py  tests_file.py  tests_file_content.py  tests_playbook.py  tests_playbook_file.py
ara/: __init__.py  __main__.py  ara-dev-server  config.py  context_processors.py  defaults.py  errorhandlers.py  fields.py  filters.py  freezer.py  manage.py  models.py  run.py  settings.py  shell.py  static.py  urls.py  utils.py  views.py  webapp.py  wsgi.py  wsgi_sqlite.py
ara/api/: admin.py  apps.py  auth.py  client.py  fields.py  files.py  filters.py  hosts.py  models.py  playbooks.py  plays.py  records.py  renderers.py  results.py  serializers.py  tasks.py  urls.py  views.py
ara/callback/: ara.py  log_ara.py
ara/cli/: base.py  data.py  expire.py  file.py  generate.py  host.py  play.py  playbook.py  prometheus.py  record.py  result.py  static.py  stats.py  task.py  utils.py
ara/clients/: http.py  offline.py  utils.py
ara/config/: base.py  compat.py  logger.py  webapp.py
ara/db/: alembic.ini  env.py  models.py
ara/plugins/: __init__.py  __main__.py
ara/server/: __main__.py  admin.py  apps.py  context_processors.py  settings.py  urls.py  utils.py  wsgi.py
ara/setup/: README.rst  __init__.py  action_plugins.py  ansible.py  callback_plugins.py  env.py  exceptions.py  library.py  lookup_plugins.py  path.py  plugins.py
ara/templates/: about.html  file.html  file_index.html  head.html  home.html  host.html  host_facts.html  host_index.html  host_summary.html  layout.html  macros.html  navbar.html  play.html  playbook.html  playbook_data.html  playbook_file_summary.html  playbook_host.html  playbook_list.html  playbook_results.html  playbook_summary.html  report.html  report_list.html  report_single.html  result.html  result_index.html  run.html  task.html  task_result.html  task_result_index.html
ara/ui/: apps.py  forms.py  pagination.py  urls.py  utils.py  views.py
ara/views/: __init__.py  about.py  debug.py  file.py  home.py  host.py  play.py  playbook.py  reports.py  result.py  static.py  task.py
contrib/: centos-8-pypi.sh
contrib/container-images/: README.rst  centos-8-pypy.sh  centos-pypi.sh  centos-source.sh  centos8-pypi.sh  fedora-ci-image.sh  fedora-distribution.sh  fedora-pypi.sh  fedora-source.sh  fedora32-distribution.sh  fedora33-distribution.sh  fedora33-pypi.sh  fedora33-source.sh
contrib/grafana/: ara-dashboard.json
contrib/playbooks/: slack-notifications.yaml
contrib/scripts/: prometheus_exporter.py
doc/: changelog-release-notes.sh  requirements.txt
doc/source/: advanced.rst  ansible-configuration.rst  ansible-plugins-and-use-cases.rst  ansible-role-ara-api.rst  ansible-role-ara-tests.rst  ansible-role-ara-web.rst  ansible-role-ara.rst  api-configuration.rst  api-documentation.rst  api-security.rst  api-usage.rst  ara-api-lookup.rst  ara-manage.rst  ara-plugin-configuration.rst  ara-record.rst  arch.rst  architecture.rst  changelog-release-notes.rst  cli.rst  conf.py  configuration.rst  configuring.rst  container-images.rst  contributing.rst  developer.rst  distributed-sqlite-backend.rst  faq.rst  getting-started.rst  index.rst  installation.rst  installing.rst  introduction.rst  manifesto.rst  playbook-names-and-labels.rst  prometheus.rst  security.rst  troubleshooting.rst  usage.rst  using_api_clients.rst  webserver.rst
docs/: Makefile  conf.py  configuration.rst  configure.rst  contributing.rst  faq.rst  index.rst  install.rst  installation.rst  installing.rst  tldr.rst  usage.rst  use.rst
hacking/: test-playbook.yml  validate.py
hacking/callback_plugins/: ara.py
playbooks/: ara.yaml  ara_api.yaml  ara_tests.yaml  ara_web.yaml  integration-tests.yaml  post.yaml  run.yaml
playbooks/ara-integration-py27-2.2.3.0-centos-7/: run.yaml
playbooks/ara-integration-py27-devel-centos-7/: run.yaml
playbooks/ara-integration-py27-latest-centos-7/: run.yaml
playbooks/ara-integration-py35-devel/: run.yaml
playbooks/ara-integration-py35-devel-fedora-26/: run.yaml
playbooks/ara-integration-py35-latest/: run.yaml
playbooks/ara-integration-py35-latest-fedora-26/: run.yaml
roles/: README.rst
roles/ara/: README.rst
roles/ara_api/: README.rst
roles/ara_frontend_nginx/: README.rst
roles/ara_tests/: README.rst
roles/ara_web/: README.rst
roles/integration-tests/: README.rst
scripts/: createvenv.sh  runserver.sh  test.sh
standalone/: mockdata.py  test.py
tests/: ansible-linters.sh  ara_tests_post.yaml  basic.yaml  collection_with_defaults.yaml  container_test_tasks.yaml  install_docker.yaml  integration-post.yaml  linters.sh  role-ara-web-post.yaml  role-integration-post.yaml  role-integration-pre.yaml  runner-playbook.yml  test_tasks.yaml  with_ansible-runner.py  with_container_images.yaml  with_defaults.yaml  with_distributed_sqlite.yaml  with_fedora_packages.yaml  with_mitogen.yaml  with_mysql.yaml  with_postgresql.yaml  zuul_docs.yaml  zuul_metadata.yaml  zuul_post_logs.yaml  zuul_post_with_mysql.yaml  zuul_post_with_postgresql.yaml  zuul_pre_multinode_networking.yaml  zuul_publish_container_images.yaml  zuul_publish_dockerhub.yaml
tests/integration/: ansible.sh  ara.sh  benchmark.yaml  benchmark_tasks.yaml  delegate_to.yaml  facts.yaml  (+19 more)
zuul.d/: jobs.yaml  layout.yaml
(+329 files in other folders)
