[metadata]
name = ara
summary = ARA Records Ansible
description-file =
    README.rst
author = OpenStack Community
author-email = openstack-discuss@lists.openstack.org
home-page = https://github.com/ansible-community/ara
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Topic :: Utilities
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Development Status :: 5 - Production/Stable

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    ara

[entry_points]
console_scripts =
    ara = ara.cli.base:main
    ara-manage = ara.server.__main__:main

ara.cli =
    expire = ara.cli.expire:ExpireObjects
    playbook list = ara.cli.playbook:PlaybookList
    playbook show = ara.cli.playbook:PlaybookShow
    playbook delete = ara.cli.playbook:PlaybookDelete
    playbook prune = ara.cli.playbook:PlaybookPrune
    play list = ara.cli.play:PlayList
    play show = ara.cli.play:PlayShow
    play delete = ara.cli.play:PlayDelete
    host list = ara.cli.host:HostList
    host show = ara.cli.host:HostShow
    host delete = ara.cli.host:HostDelete
    host metrics = ara.cli.host:HostMetrics
    record list = ara.cli.record:RecordList
    record show = ara.cli.record:RecordShow
    record delete = ara.cli.record:RecordDelete
    result list = ara.cli.result:ResultList
    result show = ara.cli.result:ResultShow
    result delete = ara.cli.result:ResultDelete
    task list = ara.cli.task:TaskList
    task show = ara.cli.task:TaskShow
    task delete = ara.cli.task:TaskDelete
    task metrics = ara.cli.task:TaskMetrics

[extras]
server=
    Django>=2.1.5,<3.0
    djangorestframework>=3.9.1
    django-cors-headers
    django-filter
    django-health-check
    dynaconf[yaml]
    tzlocal
    whitenoise
    pygments
postgresql=
    psycopg2

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = docs/html

[coverage:report]
ignore_errors = True
include =
    ara/*
omit =
    /usr*
    setup.py
    *egg*
  .venv/*

[coverage:html]
directory = reports

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True

[flake8]
# E123, E125 skipped as they are invalid PEP-8.
# E741, short ambiguous variable names
# H106 Don’t put vim configuration in source files
# H203 Use assertIs(Not)None to check for None
max-line-length = 120
ignore = E123,E125,E741
enable-extensions=H106,H203
show-source = True
exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,build,ara/api/migrations

[isort]
known_first_party = ara
default_section = THIRDPARTY
skip = build,.git,.tox,.cache,.venv,ara/api/migrations
not_skip = __init__.py
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
line_length=120
